Debugging /bank_account

--- a/application/blueprints/bank/pages/bank/form.html
+++ b/application/blueprints/bank/pages/bank/form.html
@@ -16,7 +16,7 @@
     
         {{ text_box(form, "Bank Name", "bank_name", form.bank_name, autofocus=True) }}
         {{ text_box(form, "Bank Short Name", "short_name", form.short_name, autofocus=False) }}
-        {{ text_box(form, "Bank Code", "bank_code", form.bank_name, autofocus=False) }}
+        {{ text_box(form, "Bank Code", "bank_code", form.bank_code, autofocus=False) }}
         {{ text_box(form, "Order", "priority", form.priority, autofocus=False) }}
         {{  save_button() }}
 
